(fix - note breadcrumbs) Added "overflow: ellipsis" styling for note breadcrumbs with big text.

--- a/src/client/features/note-header/NoteHeader.module.scss
+++ b/src/client/features/note-header/NoteHeader.module.scss
@@ -17,3 +17,9 @@
     line-height: 2.4;
   }
 }
+
+.breadcrumbs {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
